# ai-games

./: CMakeLists.txt  main.cpp
games/: connect_four.h
games/connect_four/: agent.h  render.h  state.h  state_tests.cpp
